# BIOAI-2

./: .gitignore  CMakeLists.txt  RandomGenerator.cpp  RandomGenerator.h  SGA.cpp  config.json  crossover.cpp  data_analysis.ipynb  main.cpp  mutation.cpp  parentSelection.cpp  structures.h  survivorSelection.cpp  utils.cpp
include/: Logger.h  RandomGenerator.h  SGA.h  crossover.h  mutation.h  parentSelection.h  structures.h  survivorSelection.h  utils.h
python/: visualizer.py
src/: Logger.cpp  RandomGenerator.cpp  SGA.cpp  crossover.cpp  main.cpp  mutation.cpp  parentSelection.cpp  survivorSelection.cpp  utils.cpp
test/include/: MockRandomGenerator.h
test/src/: MockRandomGenerator.cpp  main.cpp  test_Crossover.cpp  test_MockRandomGenerator.cpp  test_Mutation.cpp  test_ParentSelection.cpp
